# LLMExplorer

./: .env  .gitignore  Dockerfile  LLM_Chat_v3.py  README.md  docker-compose.yaml  env_sample  htmlTemplates.py  main.py  pyproject.toml  run.py
alembic/: env.py
alembic/versions/: 2754a5306a8e_nit.py  4c58d6a83208_create_chat_history_table.py
api/: schemas.py  sсhemas.py
api/conf/: config.py  messages.py
api/database/: db.py  models.py
api/repository/: users.py
api/routes/: auth.py  healthcheck.py  user.py
api/services/: auth.py  conf_email.py
migrations/: env.py
migrations/versions/: bc7e87bee4a1_change_name.py  cdeb5517c8d3_add_profile.py
templates/: base.html  email_conformation_page.html  email_verified.html  index.html  login.html  logout.html  signup.html
